[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = ""urban-knowledge-medallion"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyspark>=3.5.0",
    "boto3>=1.34.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.1",
    "h3>=3.7.6",
    "transformers>=4.37.0",
    "torch>=2.2.0",
    "pandas>=2.1.0",
    "pyarrow>=15.0.0",        # required by pyspark for pandas UDFs and reading parquet
    "scipy>=1.12.0",          # required for cosine similarity in explainability search
    "s3fs>=2024.2.0",         # required by pandas to read 's3://' paths natively
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
]